feat: Finalizacao da criacao ou alteracao de status do irrigation_action quando o commando e criado
