# internal/routes/irrigation_action.go
@@ -6,6 +6,7 @@ type IrrigationActionHandler interface {
 	CreateIrrigationCommand(c *gin.Context)
     UpdateIrrigationCommand(c *gin.Context)
     ListIrrigationHistory(c *gin.Context)
+	GetIrrigationCommands(c *gin.Context)
     GetIrrigationHistory(c *gin.Context)
     GetIrrigationStatus(c *gin.Context)
 }
@@ -16,4 +17,5 @@ func registerIrrigationActionRoutes(authRoutes gin.IRoutes, h IrrigationActionHa
 	authRoutes.GET("/irrigation/history", h.ListIrrigationHistory)
 	authRoutes.GET("/irrigation/history/:uuid", h.GetIrrigationHistory)
 	authRoutes.GET("/irrigation/status", h.GetIrrigationStatus)
+	authRoutes.GET("/irrigation/command/:uuid", h.GetIrrigationCommands)
 }
